# SAVINICH-BAKUNOVICH_OSISP_prj_2024

./: CMakeLists.txt  README.md  main.cpp
client/: clien_v2.cpp  client.cpp  client.h  client_v2.cpp  client_v3.cpp  client_v3.h
client/user_client/: user_client.cpp  user_client.h
connection_funcs/: con_funcs.cpp  con_funcs.h
hosting/: server_host_version.cpp
interface/: intarface.cpp  intarface.h  interface.cpp  interface.h
interface/gameWindow/: game.cpp  game.h
interface/global/: global.cpp  global.h
interface/ipInputWindow/: inputIp.cpp  inputIp.h
interface/menuBlock/: menu.cpp  menu.h
interface/menuWindow/: menu.cpp  menu.h
interface/preparationWindow/: preparation.cpp  preparation.h
interface/victoryWindow/: vicrotyWindow.h  victoryWindow.cpp
logicpart/: logic.cpp  logic.h
logicpart/place/: place.cpp  place.h
server/: server.cpp  server.h  server_v2.cpp  server_v3.cpp  server_v3.h
server/connection_funcs/: con_funcs.cpp  con_funcs.h
server/hosting/: server_host_version.cpp  server_host_version.h
user_client/: user_client.cpp  user_client.h
utilities/: func.cpp  func.h
